# logo.bin-builder

./: CMakeLists.txt  FindGTK.cmake  README.md  build.ninja  meson.build  mtk-logo-builder  unpack  zlibtest
include/: builder.hh  cfile.hh  converter.hh  gmagick.hh  magick.hh  mtkutil.h  zhandle.hh  zlib.hh
src/: builder.cc  cfile.cc  cli.cc  convert.c  converter.cc  gmagick.cc  magick.cc  mtkutil.c  utility.c  validate.c  zhandle.cc  zlib.c  zlib.cc
test/: logo_res.txt  logotest.c  test.rgba
